--- a/src/app/index.html
+++ b/src/app/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-	<head></head>
+	<head>
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Montserrat:700" rel="stylesheet">
+	</head>
 	<body>
 		<div id="root"></div>
 	</body>
