--- a/src/app/scss/main.scss
+++ b/src/app/scss/main.scss
@@ -1,5 +1,14 @@
 /*-- Variables --*/
-$transparent: rgba(0,0,0,0);
+	/*-- Colors --*/
+	$transparent: rgba(0,0,0,0);
+	$tan: #ffe8c6;
+	$navy: #1d1e2b;
+	$collegeBlue: #3a69a9;
+	$tangoPink: #e4717a; //#ee6e6e
+	$sunshine: #fff58f;
+	/*-- Fonts --*/
+	$Montserrat: 'Montserrat', sans-serif;
+	$OpenSans: 'Open Sans', sans-serif;
 /*-- Mixins --*/
 @import './mixins/__flexbox';
 @import './mixins/__animate';
@@ -34,8 +43,61 @@ body {
 	padding-bottom: 100px;
 }
 
-/*-- Components --*/
+/*-- Pages --*/
+.landingPage {
+	padding: 10px;
+	background: $tan;
+	height: 50vh;
 
+	h1 {
+		font-family: $Montserrat;
+		text-align: center;
+		//letter-spacing: 8px;
+		padding: 0em 0.67em;
+		font-size: 75px;
+		font-weight: 700;
+	}
+
+	p {
+		font-family: $OpenSans;
+		text-align: center;
+		font-size: 20px;
+		font-weight: 400;
+	}
+}
+
+
+/*-- Components --*/
+nav {
+	@include flexbox;
+	@include flex-direction(row);
+	@include justify-content(space-between);
+	padding: 0 4vw;
+
+	.left {
+		@include flexbox;
+		@include flex-direction(row);
+		@include justify-content(flex-start);
+
+		.navLink {
+			font-family: $Montserrat;
+			padding: 10px;
+			text-decoration: none;
+		}
+	}
+
+	.right {
+		@include flexbox;
+		@include flex-direction(row);
+		@include justify-content(flex-end);
+
+		.navLink {
+			font-family: $OpenSans;
+			padding: 10px;
+			text-decoration: none;
+		}
+	}
+}
 
 
 
