--- a/src/app/scss/main.scss
+++ b/src/app/scss/main.scss
@@ -66,7 +66,15 @@ body {
 }
 
 /*-- Flex --*/
-.flex {}
+.flex {
+	@include flexbox;
+	@include flex-direction(row);
+	@include justify-content(flex-start);
+}
+
+.flex.center {
+	@include justify-content(center);
+}
 
 /*-- Components --*/
 nav {
