--- a/src/app/scss/main.scss
+++ b/src/app/scss/main.scss
@@ -39,29 +39,87 @@ body {
 }
 
 #root {
-	overflow: auto;
-	padding-bottom: 100px;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 /*-- Pages --*/
 .landingPage {
-	padding: 10px;
-	background: $tan;
-
-	h1 {
-		font-family: $Montserrat;
-		text-align: center;
-		//letter-spacing: 8px;
-		padding: 0em 0.67em;
-		font-size: 75px;
-		font-weight: 700;
+	.card {
+		padding: 10px;
+		background: white;
+		height: 85vh;
+		position: relative;
 	}
 
-	p {
-		font-family: $OpenSans;
-		text-align: center;
-		font-size: 20px;
-		font-weight: 400;
+	.card.tan {
+		background: $tan;
+	}
+
+	.card.tanFade{
+		background: linear-gradient($tan, white);
+	}
+
+	.pen {
+		height: 45px;
+		position: absolute;
+		left: 0px;
+		top: 0px;
+		transform: rotate(-30deg);
+		@include transition(all 0.3s ease);
+	}
+
+	.notebook {
+		height: 395px;
+		position: absolute;
+		right: -96px;
+		top: 300px;
+		transform: rotate(40deg);
+		@include transition(all 0.3s ease);
+	}
+
+	.phone {
+		height: 405px;
+		position: absolute;
+		left: 0px;
+		top: 380px;
+		transform: rotate(-20deg);
+		@include transition(all 0.3s ease);
+	}
+
+	.earpods {
+		height: 185px;
+		position: absolute;
+		top: 300px;
+		right: -20px;
+		transform: rotate(-5deg);
+		@include transition(all 0.3s ease);
+	}
+
+	.navContainer {
+		position: absolute;
+		width: calc(100% - 20px);
+	}
+
+	article {
+		height: calc(100% - 42px);
+
+		h1 {
+			font-family: $Montserrat;
+			text-align: center;
+			//letter-spacing: 8px;
+			padding: 0em 0.67em;
+			font-size: 75px;
+			font-weight: 700;
+		}
+
+		p {
+			font-family: $OpenSans;
+			text-align: center;
+			font-size: 20px;
+			font-weight: 400;
+			padding: 0px 4vw;
+		}
 	}
 }
 
@@ -72,7 +130,12 @@ body {
 	@include justify-content(flex-start);
 }
 
-.flex.center {
+.flex.xcenter {
+	@include justify-content(center);
+}
+
+.flex.ycenter {
+	@include flex-direction(column);
 	@include justify-content(center);
 }
 
@@ -98,6 +161,7 @@ nav {
 			font-family: $Montserrat;
 			padding: 10px;
 			text-decoration: none;
+			cursor: pointer;
 		}
 	}
 
@@ -110,6 +174,7 @@ nav {
 			font-family: $OpenSans;
 			padding: 10px;
 			text-decoration: none;
+			cursor: pointer;
 		}
 
 		.navLink.signUp {
@@ -128,6 +193,7 @@ nav {
 	color: white;
 	padding: 10px 15px;
 	border-radius: 3px;
+	cursor: pointer;
 }
 
 
